// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography should match snapshots body1 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg eECYig"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots body2 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg Roykd"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots body3 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg kDnCsN"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots h1 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg fKKumM"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots head 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg ckieKA"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots subtitle 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg fHhmls"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots title 1`] = `
<DocumentFragment>
  <p
    class="sc-aXZVg lcLNsl"
  >
    Text goes here
  </p>
</DocumentFragment>
`;
